<resources>
    <string name="app_name">IronLab</string>
    <string name="contentDescriptionBtnHome">Home</string>
    <string name="contentDescriptionBtnTreino">Home</string>
    <string name="contentDescriptionBtnPerfil">Home</string>
    <string name="contentDescriptionBtnMenu">Home</string>
    <string name="progressText">Seu Progresso:</string>
    <string name="bemVindoUser">Bem Vindo, Usuário</string>
    <string name="bemVindo">Bem Vindo</string>
    <string-array name="treinos">
        <item>Braços</item>
        <item>Costas</item>
        <item>Pernas</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>