<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353030"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:background="#F82E2E"
        android:contentDescription="@string/contentDescriptionBtnHome"
        android:padding="18dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/btnTreino"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:background="#F82E2E"
        android:contentDescription="@string/contentDescriptionBtnTreino"
        android:padding="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/halteres" />

    <ImageButton
        android:id="@+id/btnPerfil"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:background="#F82E2E"
        android:contentDescription="@string/contentDescriptionBtnPerfil"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/user" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:background="#F82E2E"
        android:contentDescription="@string/contentDescriptionBtnMenu"
        android:padding="22dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/menu" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="88dp"
        android:layout_height="94dp"
        android:indeterminateTint="#0BBA05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="19dp"
        android:text="@string/progressText"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/treinoMsgBox"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <View
        android:id="@+id/view"
        android:layout_width="280dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <RadioGroup
        android:id="@+id/escolhaTreinoGroup"
        android:layout_width="150dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treinoMsgBox"
        app:layout_constraintVertical_bias="0.035">

        <RadioButton
            android:id="@+id/rbBraco"
            android:layout_width="133dp"
            android:layout_height="26dp"
            android:text="Braços"
            android:textColor="#FAFAFA" />

        <RadioButton
            android:id="@+id/rbCostas"
            android:layout_width="133dp"
            android:layout_height="26dp"
            android:text="Costas"
            android:textColor="#FAFAFA" />

        <RadioButton
            android:id="@+id/rbPernas"
            android:layout_width="133dp"
            android:layout_height="26dp"
            android:text="Pernas"
            android:textColor="#FAFAFA" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>